[package]
name = "weather-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing", "macros", "ws", "tokio"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
